--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(numerical_integral)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
 
-add_executable(numerical_integral numerical_integral.c
+add_executable(numerical_integral
+        main.c
         gui.c
         expression_parser.c
         integral.c)
+
 target_include_directories(numerical_integral PRIVATE ${GTK3_INCLUDE_DIRS})
 target_link_libraries(numerical_integral PRIVATE ${GTK3_LIBRARIES})
