Modularization, adding integration features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,19 +6,16 @@ pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
 
 set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED True)
+set(CMAKE_BUILD_TYPE Debug)
 
-if (NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
-endif ()
-
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
-endif ()
+set(CMAKE_C_FLAGS_RELEASE "-O3 -fno-fast-math -fno-unsafe-math-optimizations -frounding-math -march=native")
+set(CMAKE_C_FLAGS_DEBUG "-O2 -fno-fast-math -fno-unsafe-math-optimizations -frounding-math -march=native")
 
 add_executable(numerical_integral
         src/program/main.c
         src/ui/gui.c
         src/parser/expression_parser.c
+        src/controls/controls.c
         src/integrator/integral.c)
 
 target_include_directories(numerical_integral
@@ -28,6 +25,9 @@ target_include_directories(numerical_integral
         src/integrator
         src/program
         src/memcheck
+        src/controls
 )
 
 target_link_libraries(numerical_integral PRIVATE ${GTK3_LIBRARIES})
+
+message(STATUS "Current build type: ${CMAKE_BUILD_TYPE}")
